# azure-doc-intelligence-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  ONBOARDING.md  README.md  coverage.json  deploy.config.example  diag-settings.json  docker-compose.yml  pyproject.toml
.claude/: migrated-archon-tasks.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  dependabot-auto-merge.yml
PRPs/: azure-form-extration.md
PRPs/ai_docs/: azure_document_intelligence_guide.md  azure_document_intelligence_patterns.md  azure_functions_python_v2_patterns.md  azure_services_comprehensive_guide.md  azure_services_summary.md  azure_synapse_pipeline_patterns.md
docs/: README.md
docs/api/: API-VERSIONING.md  function-api.md
docs/azure-services/: README.md
docs/diagrams/: architecture-detailed.excalidraw  architecture-detailed.md  architecture-overview.md  architecture.excalidraw
docs/guides/: configuration.md  deployment.md  disaster-recovery.md  document-intelligence-custom-models.md  document-intelligence-studio-walkthrough.md  getting-started.md  troubleshooting.md
infra/: main.bicep  main.json
infra/modules/: alert-rules.bicep  alert-rules.json  cosmos-db-database.bicep  cosmos-db.bicep  cosmos-db.json  cosmos-role-assignment.bicep  document-intelligence.bicep  function-app.bicep  function-app.json  key-vault.bicep  key-vault.json  log-analytics.bicep  monitor-workbook.bicep  monitor-workbook.json  private-endpoints.bicep  private-endpoints.json  role-assignment.bicep  storage.bicep  storage.json  synapse.bicep
infra/parameters/: dev.bicepparam  dev.json  existing.bicepparam  existing.json  prod.bicepparam  prod.json
notebooks/: 00-Getting-Started.ipynb  01-Deployment-New-Resources.ipynb  02-Deployment-Existing-Resources.ipynb  03-Local-Development.ipynb  04-Testing-Linting.ipynb  05-Synapse-Pipeline.ipynb  06-Analytics-SynapseLink.ipynb  07-Monitoring-Troubleshooting.ipynb  README.md  SETUP-GUIDE.md
scripts/: Deploy-SynapseArtifacts.ps1
src/functions/: Dockerfile  config.py  function_app.py  host.json  local.settings.template.json  middleware.py  models.py  openapi.yaml  requirements.txt
tests/: README.md  conftest.py
tests/fixtures/: README.md  __init__.py  mock_services.py  sample_document_result.json  test_data.py
tests/integration/: test_blob_emulator.py  test_blob_service_integration.py  test_cosmos_emulator.py  test_cosmos_service_integration.py  test_end_to_end.py  test_idempotency_integration.py
tests/unit/: test_api_versioning.py  test_audit_service.py  test_blob_service.py  test_config.py  (+19 more)
(+28 files in other folders)
