[project]
name = "azure-doc-intel-pipeline"
version = "1.0.0"
description = "Azure Document Intelligence PDF Processing Pipeline with Synapse orchestration"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Document Processing Team" }]
keywords = ["azure", "document-intelligence", "synapse", "cosmos-db", "pdf-processing"]

dependencies = [
    "azure-ai-documentintelligence[aio]>=1.0.0",
    "azure-cosmos[aio]>=4.7.0",
    "azure-functions>=1.21.0",
    "azure-identity[aio]>=1.19.0",
    "azure-storage-blob>=12.19.0",
    "azure-storage-queue>=12.9.0",
    "azure-keyvault-secrets>=4.8.0",
    "aiohttp>=3.10.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "python-dotenv>=1.0.0",
    "pre-commit>=3.6.0",
    "bandit[toml]>=1.7.0",
    "pypdf>=4.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/functions"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "python-dotenv>=1.0.0",
    "pre-commit>=3.6.0",
    "bandit[toml]>=1.7.0",
    "pypdf>=4.0.0",
    "httpx>=0.27.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["services", "config"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    ".venv/",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
